vlib/v/parser/tests/comptime_vweb_without_import_vweb_err.vv
fn main() {
	$vweb.html('index.html')
}
